still under docs on images,feat:delete-folder
